--- a/src/templates/indexFolderTemplate.jinja
+++ b/src/templates/indexFolderTemplate.jinja
@@ -2,27 +2,28 @@
                 "http://www.w3.org/TR/REC-html40/loose.dtd">
 <html>
 <head>
+  <base href="{{base}}">
   <title>Index of {{project_name}} project: {{currfold}} </title>
   <meta name="keywords" content="{{project_name}}">
   <meta name="description" content="{{project_name}}">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   <meta name="" content="PyMDoc documentation generator for Matlab v1.0 &copy; 2017 Andres Ferreiro">
   <meta name="robots" content="index, follow">
-  <link type="text/css" rel="stylesheet" href="{{style}}/style.css">
+  <link type="text/css" rel="stylesheet" href="utils/style.css">
 </head>
 <body>
 <a name="_top"></a>
-<header>{% if project_logo %}<center><img src="{{style}}\{{project_logo}}" alt="Project Logo" border="2px" style="width:10%;height:10%;"></center>{% endif %} {% if project_name %}
+<header>{% if project_logo %}<center><img src="utils/{{project_logo}}" alt="Project Logo" border="2px" style="width:10%;height:10%;"></center>{% endif %} {% if project_name %}
   <br><strong>{{project_name}} Project</strong></br>
   {% endif %}</header>
 
   <nav>
     <center><h3> File Navigation </h3></center>
     {% for item in project_folders %}
-    <a href="{{item+'\index.html'}}"><img alt="^" border="0" src="{{style}}/folder.ico"><b class='nm'> {{item.replace(cmmprfxout, '')}}</b></a>
+    <a href="{{item+'\index.html'}}"><img alt="^" border="0" src="utils/folder.ico"><b class='nm'> {{item.replace('files/', '')}}</b></a>
     {% for elm in pathslist %}
     {% if  elm[0] in item %}
-    <a href="{{'/'.join(elm)}}.html">&nbsp;&nbsp;&nbsp;&nbsp;<img alt="^" border="0" src="{{style}}/matlabicon.gif"><i> {{elm[1]}}</i></a>
+    <a href="{{'/'.join(elm)}}.html">&nbsp;&nbsp;&nbsp;&nbsp;<img alt="^" border="0" src="utils/matlabicon.gif"><i> {{elm[1]}}</i></a>
     {% endif %}
     {% endfor %}
     {% endfor %}
@@ -30,16 +31,16 @@
 
 <article>
 {% if project_name != '' %}
-<div><a href="{{dir}}/{{project_name}}.html">Home</a>\{{currfold}}</div>
+<div><a href="{{project_name}}.html">Home</a>/{{currfold.replace('files/', '')}}</div>
 {% else %}
-<div><a href="{{dir}}/index.html">Home</a>\{{currfold}}</div>
+<div><a href="index.html">Home</a>\{{currfold.replace('files/', '')}}</div>
 {% endif %}
-<h1><img alt="^" border="0" src="{{style}}/matlabicon.gif"><strong> Index of '{{currfold}}' folder</strong></h1>
+<h1><img alt="^" border="0" src="utils/matlabicon.gif"><strong> Index of '{{currfold.replace('files/', '')}}' folder</strong></h1>
 {% if functions %}
 <h2><a name="_toc"></a>Documented functions: </h2>
 <ul style="list-style:none">
   {% for fun in functions %}
-    <li><img alt="mt" border="0" src="{{style}}/matlabicon.gif"> <a href="{{folderpath+'/'+fun.name}}.html">{{fun.name}}</a>: {{fun.summ}}</li>
+    <li><img alt="mt" border="0" src="utils/matlabicon.gif"> <a href="{{currfold+'/'+fun.name}}.html">{{fun.name}}</a>: {{fun.summ}}</li>
     {% endfor %}
 </ul>
 {% endif %}
@@ -47,7 +48,7 @@
 <h2><a name="_toc"></a>Documented scripts: </h2>
 <ul style="list-style:none">
   {% for scr in scripts %}
-    <li><img alt="mt" border="0" src="{{style}}/matlabicon.gif"> <a href="{{folderpath+'/'+scr.name}}.html">{{scr.name}}</a>: {{scr.desc}}</li>
+    <li><img alt="mt" border="0" src="utils/matlabicon.gif"> <a href="{{currfold+'/'+scr.name}}.html">{{scr.name}}</a>: {{scr.desc}}</li>
     {% endfor %}
 </ul>
 {% endif %}
@@ -55,11 +56,11 @@
 <h2><a name="_toc"></a>Documented classes: </h2>
 <ul style="list-style:none">
     {% for cls in classes %}
-    <li><img alt="mt" border="0" src="{{style}}/matlabicon.gif"> <a href="{{folderpath+'/'+cls.name}}.html">{{cls.name}}</a>: {{cls.summ}}</li>
+    <li><img alt="mt" border="0" src="utils/matlabicon.gif"> <a href="{{currfold+'/'+cls.name}}.html">{{cls.name}}</a>: {{cls.summ}}</li>
     {% endfor %}
 </ul>
 {% endif %}
 </article>
-<footer><address>Generated on {{date}} by <strong><a href="https://bitbucket.org/ferreteleco/pymdoc-generator" title="PyMDoc documentation generator for Matlab v1.0">PyDoc documentation generator for Matlab v{{version}}</a></strong> &copy; 2017</address></footer>
+<footer><address>Generated on {{date}} by <strong><a href="https://bitbucket.org/ferreteleco/pymdoc-generator" title="PyMDoc documentation generator for Matlab v{{version}}">PyDoc documentation generator for Matlab v{{version}}</a></strong> &copy; 2017</address></footer>
 </body>
 </html>
