--- a/src/templates/indexTemplate.jinja
+++ b/src/templates/indexTemplate.jinja
@@ -13,56 +13,56 @@
 </head>
 <body>
 <a name="_top"></a>
-<header>{% if project_logo %}<center><img src="utils/{{project_logo}}" alt="Project Logo" border="2px" style="width:10%;height:10%;"></center>{% endif %} {% if project_name %}
+<header>{% if project_logo -%}<center><img src="utils/{{project_logo}}" alt="Project Logo" border="2px" style="width:10%;height:10%;"></center>{% endif -%} {% if project_name -%}
   <br><strong>{{project_name}} Project</strong></br>
-  {% endif %}</header>
+  {% endif -%}</header>
   <nav>
     <center><h3> File Navigation </h3></center>
-    {% for item in project_folders %}
+    {% for item in project_folders -%}
     <a href="{{item+'/index.html'}}"><img alt="^" border="0" src="utils/folder.ico"><b class='nm'> {{item.replace('files/', '')}}</b></a>
-    {% for elm in pathslist %}
-    {% if  elm[0] in item %}
+    {% for elm in pathslist -%}
+    {% if  elm[0] in item -%}
     <a href="{{'/'.join(elm)}}.html">&nbsp;&nbsp;&nbsp;&nbsp;<img alt="^" border="0" src="utils/matlabicon.gif"><i> {{elm[1]}}</i></a>
-    {% endif %}
-    {% endfor %}
-    {% endfor %}
+    {% endif -%}
+    {% endfor -%}
+    {% endfor -%}
   </nav>
 <article>
 <h1><img alt="^" border="0" src="utils/matlabicon.gif"><strong> Index of {{project_name}} project</strong></h1>
 
-{% if project_folders %}
+{% if project_folders -%}
 <h2><a name="_toc"></a>Source folders: </h2>
 <ul style="list-style:none">
   {% for folder in project_folders %}
     <li><img alt="mt" border="0" src="utils/folder.ico"> <a href="{{folder}}/index.html"><b>{{folder.replace('files/', '')}}</b></a></li>
-    {% endfor %}
+    {% endfor -%}
 </ul>
-{% endif %}
+{% endif -%}
 
-{% if functions %}
+{% if functions -%}
 <h2><a name="_toc"></a>Documented functions: </h2>
 <ul style="list-style:none">
-  {% for fun in functions %}
+  {% for fun in functions -%}
     <li><img alt="mt" border="0" src="utils/matlabicon.gif"> <a href="{{fun.path}}/{{fun.name}}.html"><b>{{fun.name}}</b></a>: {{fun.summ}}</li>
-    {% endfor %}
+    {% endfor -%}
 </ul>
-{% endif %}
-{% if scripts %}
+{% endif -%}
+{% if scripts -%}
 <h2><a name="_toc"></a>Documented scripts: </h2>
 <ul style="list-style:none">
-  {% for scr in scripts %}
+  {% for scr in scripts -%}
     <li><img alt="mt" border="0" src="utils/matlabicon.gif"> <a href="{{scr.path}}/{{scr.name}}.html"><b>{{scr.name}}</b></a>: {{scr.desc}}</li>
-    {% endfor %}
+    {% endfor -%}
 </ul>
-{% endif %}
-{% if classes %}
+{% endif -%}
+{% if classes -%}
 <h2><a name="_toc"></a>Documented classes: </h2>
 <ul style="list-style:none">
-    {% for cls in classes %}
+    {% for cls in classes -%}
     <li><img alt="mt" border="0" src="utils/matlabicon.gif"> <a href="{{cls.path}}/{{cls.name}}.html"><b>{{cls.name}}</b></a>: {{cls.summ}}</li>
-    {% endfor %}
+    {% endfor -%}
 </ul>
-{% endif %}
+{% endif -%}
 </article>
 <footer><address>Generated on {{date}} by <strong><a href="https://bitbucket.org/ferreteleco/pymdoc-generator" title="PyMDoc documentation generator for Matlab v{{version}}">PyDoc documentation generator for Matlab v{{version}}</a></strong> &copy; 2017</address></footer>
 </body>
