--- a/src/templates/scriptTemplate.jinja
+++ b/src/templates/scriptTemplate.jinja
@@ -13,30 +13,31 @@
 </head>
 <body>
 <a name="_top"></a>
-<header>{% if project_logo %}<center><img src="utils/{{project_logo}}" alt="Project Logo" border="2px" style="width:10%;height:10%;"></center>{% endif %} {% if project_name %}
+<header>{% if project_logo -%}<center><img src="utils/{{project_logo}}" alt="Project Logo" border="2px" style="width:10%;height:10%;"></center>{% endif -%} {% if project_name -%}
   <br><strong>{{project_name}} Project</strong></br>
-  {% endif %}</header>
+  {% endif -%}</header>
   <nav>
     <center><h3> File Navigation </h3></center>
-    {% for item in project_folders %}
+    {% for item in project_folders -%}
     <a href="{{item+'/index.html'}}"><img alt="^" border="0" src="utils/folder.ico"><b class='nm'> {{item.replace('files/', '')}}</b></a>
-    {% for elm in pathslist %}
-    {% if  elm[0] in item %}
+    {% for elm in pathslist -%}
+    {% if  elm[0] in item -%}
     <a href="{{'/'.join(elm)}}.html">&nbsp;&nbsp;&nbsp;&nbsp;<img alt="^" border="0" src="utils/matlabicon.gif"><i> {{elm[1]}}</i></a>
-    {% endif %}
-    {% endfor %}
-    {% endfor %}
+    {% endif -%}
+    {% endfor -%}
+    {% endfor -%}
   </nav>
 <article>
-  {% if project_name != '' %}
+  {% if project_name != '' -%}
   <div><a href="{{project_name}}.html">Home</a><a href="files/{{currbase}}/index.html">/{{currbase}}</a>/{{fun.name}}.m</div>
-  {% else %}
+  {% else -%}
   <div><a href="index.html">Home</a><a href="files/{{currbase}}/index.html">/{{currbase}}</a>/{{fun.name}}.m</div>
-  {% endif %}
+  {% endif -%}
 <h1><img alt="^" border="0" src="utils/matlabicon.gif"><strong> Script:</strong> {{fun.name}}</h1>
 <h2><a name="_toc"></a>Table of Contents: </h2>
 <ul style="list-style:none">
   <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_description">Description</a></li>
+  <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_references">References</a></li>
   <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_cri">Cross-reference Information</a></li>
   <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_usedby">Used by</a></li>
   <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_uses">Uses</a></li>
@@ -48,38 +49,49 @@
   <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_code">Source Code</a></li>
 </ul>
 
-<h2><a name="_description"></a>Description: <a href=files/{{currbase}}/{{fun.name}}.html"#_top"><img alt="^" border="0" src="utils/up.png"></a></h2>
+<h2><a name="_description"></a>Description: <a href="files/{{currbase}}/{{fun.name}}.html#_top"><img alt="^" border="0" src="utils/up.png"></a></h2>
 <div class="box">{{fun.desc.replace('\n', '<br>')}}</div>
 
-{% if usage %}
+{%if fun.refs -%}
+<h2><a name="_references"></a>References: <a href="files/{{currbase}}/{{fun.name}}.html#_top"><img alt="^" border="0" src="utils/up.png"></a></h2>
+<div class="box">
+<ol>
+{% for item in fun.refs -%}
+<li><a href= "{{item}}"> {{item}}</a></li>
+{% endfor -%}
+</ol>
+</div>
+{% endif -%}
+
+{% if usage -%}
 <h2><a name="_cri"></a>Cross-reference information: <a href="files/{{currbase}}/{{fun.name}}.html#_top"><img alt="^" border="0" src="utils/up.png"></a></h2>
 
 <h3><a name="_usedby"></a>Used by: <a href="files/{{currbase}}/{{fun.name}}.html#_top"><img alt="^" border="0" src="utils/up.png"></a></h3>
 <div class="box">
   <ul style="list-style:none">
-  {% for item in fun.usedby %}
-  {% for element in pathslist %}
-  {% if element[1] == item %}
+  {% for item in fun.usedby -%}
+  {% for element in pathslist -%}
+  {% if element[1] == item -%}
   <li><img alt="mt" border="0" src="utils/matlabicon.gif"><a href= "{{element[0]}}/{{item}}.html"> {{item}}</a></li>
-  {% endif %}
-  {% endfor %}
-  {% endfor %}
+  {% endif -%}
+  {% endfor -%}
+  {% endfor -%}
 </ul>
 </div>
 
 <h3><a name="_uses"></a>Uses: <a href="files/{{currbase}}/{{fun.name}}.html#_top"><img alt="^" border="0" src="utils/up.png"></a></h3>
 <div class="box">
   <ul style="list-style:none">
-  {% for item in fun.uses %}
-  {% for element in pathslist %}
-  {% if element[1] == item %}
+  {% for item in fun.uses -%}
+  {% for element in pathslist -%}
+  {% if element[1] == item -%}
   <li><img alt="mt" border="0" src="utils/matlabicon.gif"><a href= "{{element[0]}}/{{item}}.html"> {{item}}</a></li>
-  {% endif %}
-  {% endfor %}
-  {% endfor %}
+  {% endif -%}
+  {% endfor -%}
+  {% endfor -%}
   </ul>
 </div>
-{% endif %}
+{% endif -%}
 <h2><a name="_misc"></a>Miscelaneous information: <a href="files/{{currbase}}/{{fun.name}}.html#_top"><img alt="^" border="0" src="utils/up.png"></a></h2>
 <ul>
   <li><a name="_author"></a><strong>Author: </strong> {{fun.author}}</li>
@@ -88,12 +100,12 @@
   <li><a name="_company"></a><strong>Company: </strong> {{fun.company}}</a></li>
 </ul>
 
-{% if code %}
+{% if code -%}
 <h2><a name="_code"></a>Source Code: <a href="files/{{currbase}}/{{fun.name}}.html#_top"><img alt="^" border="0" src="utils/up.png"></a></h2>
 <div class="box"><pre class="code">
       {{'\n'.join(code)}}
 </pre></div>
-{% endif %}
+{% endif -%}
 </article>
 <footer><address>Generated on {{date}} by <strong><a href="https://bitbucket.org/ferreteleco/pymdoc-generator" title="PyMDoc documentation generator for Matlab v1.0">PyDoc documentation generator for Matlab v{{version}}</a></strong> &copy; 2017</address></footer>
 </body>
