--- a/src/templates/scriptTemplate.jinja
+++ b/src/templates/scriptTemplate.jinja
@@ -37,16 +37,22 @@
 <h2><a name="_toc"></a>Table of Contents: </h2>
 <ul style="list-style:none">
   <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_description">Description</a></li>
+  {%if fun.refs -%}
   <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_references">References</a></li>
+  {% endif -%}
+  {%if usage -%}
   <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_cri">Cross-reference Information</a></li>
   <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_usedby">Used by</a></li>
   <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_uses">Uses</a></li>
+  {% endif -%}
   <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_misc">Miscellaneous information</a></li>
   <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_author">Author</a></li>
   <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_version">Current Version</a></li>
   <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_date">Date</a></li>
   <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_company">Company</a></li>
+  {%if code -%}
   <li><img alt="mt" border="0" src="utils/info.png"><a href="files/{{currbase}}/{{fun.name}}.html#_code">Source Code</a></li>
+  {% endif -%}
 </ul>
 
 <h2><a name="_description"></a>Description: <a href="files/{{currbase}}/{{fun.name}}.html#_top"><img alt="^" border="0" src="utils/up.png"></a></h2>
